<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejemplo2"
    android:background="@mipmap/marcianito">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/head"
                android:textSize="30dp"
                app:fontFamily="sans-serif"
                />

            <TextView
                android:id="@+id/lblnumero1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dato1"
                android:textSize="18dp"
                />

            <EditText
                android:id="@+id/txtnumero1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                />

            <TextView
                android:id="@+id/lblnumero2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginTop="16dp"
                android:text="@string/dato2"
                android:textSize="18dp"
                />

            <EditText
                android:id="@+id/txtnumero2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/btnsumar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnsumar"
                    android:layout_marginRight="4dp"
                    />

                <Button
                    android:id="@+id/btnrestar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnrestar"
                    android:layout_marginRight="4dp"
                    />

                <Button
                    android:id="@+id/btnmultiplicar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnmultiplicar"
                    android:layout_marginRight="4dp"
                    />

                <Button
                    android:id="@+id/btndividir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btndividir"
                    />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp">


                <TextView
                    android:id="@+id/lblresultado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblresultado"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18dp"
                    />

                <Button
                    android:id="@+id/btnew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nuevo"
                    android:layout_marginTop="24dp"
                    />

                <Button
                    android:id="@+id/btnacerca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="Acerca de"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>